Fixed image cropping on small screens, and drop down menu for same thing.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,17 +5,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.topnav {
-  position: fixed;
+.header {
+  background-image: url("../imgs/background.jpg");
+  height: 100vh;
+  width: 100%;
+  /* background-size: 100% auto; */
   overflow: hidden;
-  margin: 20px;
-  width: auto;
-  background-color: #333333;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.header {
+.head-image {
   position: relative;
-  height: 100vh;
+  object-fit: cover;
+  max-width: 100%;
+  left: 500%; /* move the whole width of the image to the right */
+  margin-left: -1000%; /* magic! */
   z-index: -1;
 }
 
@@ -26,26 +34,21 @@ body {
   left: 25%;
   width: 40%;
   transform: translate(-50%, -25%);
-  font-size: 500%;
-}
-
-.head-image {
-  width: 100%;
-  max-height: 100vh;
-  object-fit: cover;
+  font-size: 6vw;
 }
 
 .subpage {
-  min-height: 100vh;
+  height: 100vh;
   padding-top: 80px;
   padding-left: 60px
 }
 
-/* Position the navbar container inside the image */
-.container {
+.topnav {
   position: fixed;
+  overflow: hidden;
   margin: 20px;
   width: auto;
+  background-color: #333333;
 }
 
 .topnav a {
@@ -77,7 +80,7 @@ body {
   display: none;
 }
 
-@media screen and (orientation: portrait) {
+@media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
@@ -85,8 +88,8 @@ body {
   }
 }
 
-@media screen and (orientation: portrait) {
-  .topnav.responsive {position: relative;}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: fixed;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
